--- a/main.html
+++ b/main.html
@@ -5,8 +5,15 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
+     
 <body>
+	<main>
+		 <section class="flex">
+			 <section id="box box-1"></section>
+			 <section id="box box-2"></section>
+			 <section id="box box-3"></section>
+		 </section>
+	 </main>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
