--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 <body>
 	<main>
 		 <section class="flex">
-			 <section id="box box-1"></section>
-			 <section id="box box-2"></section>
-			 <section id="box box-3"></section>
+			 <section class="box box-1">3</section>
+			 <section class="box box-2">1</section>
+			 <section class="box box-3">2</section>
 		 </section>
 	 </main>
 	<!-- the entire body must be written by student -->
