--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
      
 <body>
 	<main>
-		 <section class="flex">
-			 <section class="box box-1">3</section>
+		 <section class="holder">
+			 <section class="box">3</section>
 			 <section class="box box-2">1</section>
 			 <section class="box box-3">2</section>
 		 </section>
